--- a/src/styles/mobile-navbar.css
+++ b/src/styles/mobile-navbar.css
@@ -17,6 +17,7 @@
   /* Position menu button and Get Started button on right side */
   .sip-header .flex.items-center.gap-4 {
     margin-left: auto;
+    justify-content: flex-end;
   }
   
   /* Make the header background more visible */
